--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -3,6 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Vesikorkeusmittauspisteiden tiedot</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static "app/app.css" %}">
 </head>
 <body>
 <h1>Vesikorkeusmittauspisteiden tiedot</h1>
