Postgres as db, and some Leaflet assets

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,6 +5,8 @@
     <title>Vesikorkeusmittauspisteiden tiedot</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static "app/app.css" %}">
+    {% block media %}
+    {% endblock media %}
 </head>
 <body>
 <h1>Vesikorkeusmittauspisteiden tiedot</h1>
