New map system from @juyrjola

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -15,5 +15,5 @@
     <li>{{ obj }}</li>
 {% endfor %}
 </ul>
-    <script src="{% static "app/map.js" %}"></script>
+    <script src="{% static "app/servicemap.js" %}"></script>
 {% endblock content %}
