Now with highcharts, but not quite there yet :(

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,16 +2,21 @@
 {% extends "app/base.html" %}
 {% load staticfiles %}
 {% block media %}
-     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+    <script src="{% static "app/jquery.min.js" %}"></script>
     <script src="https://raw.githubusercontent.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
     <script src="https://raw.githubusercontent.com/kartena/Proj4Leaflet/master/src/proj4leaflet.js"></script>
-    <script src="{% static "app/chart.js" %}"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+    <script>
+        var SERIES = {{ observations|safe }};
+    </script>
 
 {% endblock media %}
 {% block content %}
      <div id="map"></div>
-    <canvas id="obschart" width="400" height="400"></canvas>
+     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <ul>
 {% for observator in queryset %}
     <li>{{ observator }}</li>
