--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,10 +3,10 @@
 {% load staticfiles %}
 {% block media %}
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-    <script src="{% static "app/jquery.min.js" %}"></script>
-    <script src="https://raw.githubusercontent.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
+    <script src="{% static 'app/jquery.min.js' %}"></script>
+    <script src="{% static 'app/proj4-compressed.js' %}"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-    <script src="https://raw.githubusercontent.com/kartena/Proj4Leaflet/master/src/proj4leaflet.js"></script>
+    <script src="{% static 'app/proj4leaflet.js'%}"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
     <script>
