Started to work on mobile friendly responsive view
Working with viewport aware jQuery styles, since app already has a
hard dependency on JavaScript functioning.

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -15,9 +15,11 @@
 
 {% endblock media %}
 {% block content %}
-     <div id="map" style="float: left;"></div>
-     <div id="container" style="width:35em; height: 25em; margin: 0 auto"></div>
-
+    <div id="app">
+         <div id="map" style="float: left;"></div>
+         <div id="container"></div>
+    </div>
     <script src="{% static "app/observations.js" %}"></script>
     <script src="{% static "app/servicemap.js" %}"></script>
+    <script src="{% static "app/app.js" %}"></script>
 {% endblock content %}
