--- a/app/static/app/app.css
+++ b/app/static/app/app.css
@@ -1,6 +1,10 @@
 
 h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 
-#map { height: 30em;
+#map {
+    height: 30em;
     width: 30em;
+}
+#container {
+    width:35em; height: 25em; margin: 0 auto;
 }
