Mobile style resize works for width now
Height is set too, but since map and graph are now stacked,
they both take height from the viewport. Idea is to show
graph on top of map when with a modal which should elimate
scrolling even for small screens.

--- a/app/static/app/app.css
+++ b/app/static/app/app.css
@@ -4,7 +4,10 @@ h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 #map {
     height: 30em;
     width: 30em;
+    float: left;
 }
+
 #container {
-    width:35em; height: 25em; margin: 0 auto;
+    width:35em; height: 25em;
+    margin: 0 auto;
 }
