Buttons for observation time range

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -23,6 +23,13 @@
              <div id="container"></div>
          </div>
     </div>
+    <div>
+        <button value="3">3 kuukautta</button>
+        <button value="5">6 kuukautta</button>
+        <button value="12">1 vuosi</button>
+        <button value="24">2 vuotta</button>
+        <button value="all">kaikki</button>
+    </div>
     <script src="{% static "app/observations.js" %}"></script>
     <script src="{% static "app/servicemap.js" %}"></script>
     <script src="{% static "app/app.js" %}"></script>
