--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
     <script src="{% static 'app/jquery.min.js' %}"></script>
+    <script src="{% static 'app/URI.js' %}"></script>
     <script src="{% static 'app/proj4-compressed.js' %}"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
     <script src="{% static 'app/proj4leaflet.js'%}"></script>
@@ -20,15 +21,15 @@
          <div id="map"></div>
          <div id="contained_chart">
              <div id="container_mobiletoolbar"><button>X</button></div>
+             <div id="timerange_toolbar">
+                <button value="3">3 kuukautta</button>
+                <button value="6">6 kuukautta</button>
+                <button value="12">1 vuosi</button>
+                <button value="24">2 vuotta</button>
+                <button value="all">kaikki</button>
+            </div>
              <div id="container"></div>
          </div>
-    </div>
-    <div>
-        <button value="3">3 kuukautta</button>
-        <button value="5">6 kuukautta</button>
-        <button value="12">1 vuosi</button>
-        <button value="24">2 vuotta</button>
-        <button value="all">kaikki</button>
     </div>
     <script src="{% static "app/observations.js" %}"></script>
     <script src="{% static "app/servicemap.js" %}"></script>
