Moment.js for better date handling

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
     <script src="{% static 'app/jquery.min.js' %}"></script>
+    <script src="{% static 'app/moment-with-locales.js' %}"></script>
     <script src="{% static 'app/URI.js' %}"></script>
     <script src="{% static 'app/proj4-compressed.js' %}"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
