--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -23,11 +23,11 @@
          <div id="contained_chart">
              <div id="container_mobiletoolbar"><button>X</button></div>
              <div id="timerange_toolbar">
-                <button value="3">3 kuukautta</button>
-                <button value="6">6 kuukautta</button>
-                <button value="12">1 vuosi</button>
-                <button value="24">2 vuotta</button>
-                <button value="all">kaikki</button>
+                <button type="button" value="3">3 kuukautta</button>
+                <button type="button" value="6" class="active">6 kuukautta</button>
+                <button type="button" value="12">1 vuosi</button>
+                <button type="button" value="24">2 vuotta</button>
+                <button type="button" value="all">kaikki</button>
             </div>
              <div id="container"></div>
          </div>
