Changed app title

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -2,14 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Vesikorkeusmittauspisteiden tiedot</title>
+    <title>Pohjavesitilanne</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static "app/app.css" %}">
     {% block media %}
     {% endblock media %}
 </head>
 <body>
-<h1>Vesikorkeusmittauspisteiden tiedot</h1>
+<h1>Pohjavesitilanne</h1>
 {% block content %}{% endblock content %}
 </body>
 </html>
