--- a/app/static/app/app.css
+++ b/app/static/app/app.css
@@ -1,18 +1,9 @@
 
 h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 
-#app { position: relative; }
-
-#map {
-    height: 30em;
-    width: 30em;
-    float: left;
-    z-index: 1;
-    position: relative;
-}
-
 #contained_chart {
     clear: both;
+    /*position: relative;*/
 }
 
 #container_mobiletoolbar {
@@ -20,7 +11,7 @@ h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 }
 
 #container_chart {
-    width:35em; height: 25em;
+    /*width:35em; height: 25em;*/
     margin: 0 auto;
 }
 
