--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -20,7 +20,7 @@
 {% block content %}
     <div id="app">
          <div id="map"></div>
-         <div id="contained_chart">
+         <div id="container">
              <div id="container_mobiletoolbar"><button>X</button></div>
              <div id="timerange_toolbar">
                 <button type="button" value="3">3 kuukautta</button>
@@ -29,7 +29,7 @@
                 <button type="button" value="24">2 vuotta</button>
                 <button type="button" value="all">kaikki</button>
             </div>
-             <div id="container"></div>
+             <div id="contained_chart"></div>
          </div>
     </div>
     <script src="{% static "app/observations.js" %}"></script>
