--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -20,6 +20,14 @@
 {% block content %}
     <div id="app">
          <div id="map"></div>
+        <div id="observators">
+        <ul>
+            {% for obs in observators %}
+                <li>{{ obs.name }}:
+                    {{ obs.address|default:"" }}</li>
+            {% endfor %}
+        </ul>
+        </div>
          <div id="container">
              <div id="container_mobiletoolbar"><button>X</button></div>
              <div id="timerange_toolbar">
