--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -23,8 +23,10 @@
         <div id="observators">
         <ul>
             {% for obs in observators %}
-                <li>{{ obs.name }}:
-                    {{ obs.address|default:"" }}</li>
+                <li>
+                    {% if obs.address %}{{ obs.address }}
+                    {% else %}{{ obs.name }}{% endif %}
+                </li>
             {% endfor %}
         </ul>
         </div>
