--- a/app/static/app/app.css
+++ b/app/static/app/app.css
@@ -5,8 +5,8 @@ body {
 }
 
 ul {
-    margin: 0 1em;
-    padding: 0 1em;
+    margin: 0;
+    padding: 0;
 }
 
 li {
@@ -73,4 +73,8 @@ h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 
 #app {
     padding: 10px;
+}
+
+#observators li {
+    margin: 0.3em 1em;
 }
