--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -19,6 +19,10 @@
 {% endblock media %}
 {% block content %}
     <div id="app">
+        <div id="switch_nav">
+            <button>Kartta</button>
+            <button>Osoitteet</button>
+        </div>
         <div id="map"></div>
         <div id="observators">
         <ul>
