--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -20,8 +20,8 @@
 {% block content %}
     <div id="app">
         <div id="switch_nav">
-            <button>Kartta</button>
-            <button>Osoitteet</button>
+            <button value="map">Kartta</button>
+            <button value="observators">Osoitteet</button>
         </div>
         <div id="map"></div>
         <div id="observators">
