--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -37,7 +37,7 @@
         </ul>
         </div>
          <div id="container">
-             <div id="container_mobiletoolbar"><button>X</button></div>
+             <div id="container_mobiletoolbar"><button>Sulje kuvio</button></div>
              <div id="timerange_toolbar">
                 <button type="button" value="3">3 kuukautta</button>
                 <button type="button" value="6" class="active">6 kuukautta</button>
