Added visible and available observation points to graph

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -44,6 +44,7 @@
                 <button type="button" value="12">1 vuosi</button>
                 <button type="button" value="24">2 vuotta</button>
                 <button type="button" value="all">kaikki</button>
+                <div id="observators_amount"></div>
             </div>
              <div id="contained_chart"></div>
          </div>
