Added avg to observator info strip and tweaked its styling

--- a/app/static/app/app.css
+++ b/app/static/app/app.css
@@ -118,3 +118,7 @@ h1 { font-family: "Comic Sans MS", "Comic Sans", cursive; }
 .mobile #switch_nav {
     display: block;
 }
+
+#observators_amount {
+    margin: 1em;
+}
